Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4376

osd_trans_start() ASSERTION( get_current()->journal_info == ((void *)0)

XMLWordPrintable

    • 3
    • 11982

      lfsck crashes with the summary assertion and the following backtrace:

      libcfs_debug_dumpstack
      lbug_with_loc
      osd_trans_start
      lod_trans_start
      mdd_trans_start
      mdd_lfsck_namespace_exec_dir
      mdd_lfsck_dir_engine
      mdd_lfsck_oit_engine
      

      We had just carried out a procedure from LU-4226 to delete corrupted trusted.lma and trusted.link xattrs from files on the ldiskfs MDT.

            bobijam Zhenyu Xu
            nedbass Ned Bass (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: